웹접근성심사

--- a/_posts/2024-08-07-웹접근성.md
+++ b/_posts/2024-08-07-웹접근성.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "[웹접근성] 웹접근성 - 대체텍스트
+title:  "[웹접근성] 웹접근성 - 대체텍스트"
 categories: 웹접근성
 tag: [웹접근성]
 toc: true
@@ -10,23 +10,64 @@ sidebar:
 search: true   # 검색설정
 ---
 
+### 웹접근성
+웹 접근성이란  한국웹접근성인증평가원에서는 
+'정보통신접근성 (Web 접근성)은 「지능정보화기본법」에 따라 장애인이나 고령자분들이 웹 사이트에서 제공하는 정보를 비장애인과 동등하게 접근하고 이용 할 수 있도록 보장하는 것으로 웹 접근성 준수는 법적의무사항 입니다.'
+라고 정의하고 있다.
+
+한 마디로 장애가 있는 사람도 장애가 없는 사람과 동등한 웹접근이 및 서비스이용이 가능해야 한다는 것이다.
+
+
+#### 웹접근성 기준
+웹 접근성 심사에는 다양한 기준들이 존재한다.
+```
+1	적절한 대체 텍스트 제공
+2	자막 제공	
+3	색에 무관한 콘텐츠 인식	
+4	명확한 지시사항 제공	 
+5	텍스트 콘텐츠의 명도 대비	 
+6	자동재생 금지
+7	키보드 사용 보장	 
+8-1	키보드 사용 보장(PC웹)	 
+8-2	누르기 동작 지원(모바일웹)	 
+9	초점 이동	 
+10	조작 가능	 
+11	응답시간 조절	 
+12	정지 기능 제공	 
+13	깜빡임과 번쩍임 사용 제한	 
+14	반복영역 건너뛰기	 
+15	제목 제공	 
+16	적절한 링크 텍스트	 
+17	기본 언어 표시	 
+18	사용자 요구에 따른 실행	 
+19	콘텐츠의 선형화	 
+20	표의 구성	 
+21	레이블 제공	 
+22	오류 정정	 
+23	마크업 오류 방지	 
+24	웹 애플리케이션 접근성 준수
+```
+웹 이외에도 앱접근성심사도 있으므로 웹/앱을 개발할때에는 항상 접근성을 고려하며 개발해야 한다.
+
+
+#### 나의 웹 접근성 심사 결과
 웹접근성 갱신심사에서 부적격이 나왔다. 다른 부분은 모두 간단한 수정사항이지만
 대체텍스트 관련해서 난해한 부분이 있었다.
-보험금 청구서 양식 팩스/이메일 서비스인데 해당 팩스 내용에 대해서 제공하는 미리보기 이미지에 대해서 대체텍스트가 없다는 심사결과다.
-
+양식 팩스/이메일 서비스인데 해당 팩스 내용에 대해서 제공하는 미리보기 이미지에 대해서 대체텍스트가 없다는 심사결과다.
 현재 해당 미리보기 이미지는 총 4페이지로 구성되어 있으며 버튼을 통해 페이지 변환을 실행하고 있다.
-
-해당 이미지들에 각각 alt 속성으로 '보험금 청구서 ~~번째 이미지'라고 작성되어 있다.
-
+해당 이미지들에 각각 alt 속성으로 '양식 ~~번째 이미지'라고 작성되어 있다.
 물론 대체텍스트라는것 자체가 이미지에 대해서 상세한 설명이 필요한 부분이지만
-
 이 이미지는 미리보기 이미지인데도 불구하고 웹접근성 심사 담당자와 통화했을 때 이미지에 들어간 모든 텍스트가 대체텍스트로 필요하다고 한다.
-
 총 4페이지 분량의 청구서 양식 이미지에 대해서 대체텍스트를 제공하려면 alt속성이 아닌 마크업 언어를 통해 제공해야 할 필요성을 느꼈다.
-
 물론 이 방법을 사용했을 때 본문 내용의 소스코드보다 대체텍스트의 소스코드가 훨씬 많아지게 되는 문제가 있다.
 
-마크업 언어로 대체텍스트 사용 시 기억해야 할 사항
+처음엔 양식과 동일한 table 형식으로 대체텍스트를 제공하려고 했다. 그런데 스크린리더로 읽히게 되면 이해하기 어려울것 같아서
+ul과 li를 사용하여 리스트 형식으로 대체텍스트를 작성했다.
+
+그리고 화면 전환 없이 버튼 클릭에 따라 내부 이미지만 변경되며, vue로 제작된 프로그램이므로 
+각 대체텍스트를 컴포넌트로 만들고 이전페이지, 다음페이지 클릭에 따라 이미지와 대체텍스트 컴포넌트가 함께 변동되도록 수정하였다.
+
+##### 마크업 언어로 대체텍스트 사용 시 기억해야 할 사항
 
 - sr-only class
 
@@ -35,12 +76,78 @@ search: true   # 검색설정
 ```html
 class = 'sr-only'
 ```
+```css
+<style scoped>
+.sr-only {
+    position: absolute; 
+    width: 1px; 
+    height: 1px;
+    overflow: hidden;
+    padding: 0; 
+    margin: -1px; 
+    border: 0;
+    clip: rect(0,0,0,0);
+}
+</style>
+```
+- position: absolute; → 위치를 지정함. 위로 붕 뜬 상태가 되어 뒤에 오는 요소들의 자리를 차지하지 않게 됨
+- width: 1px; → 가로크기
+- height: 1px; → 세로크기
+- overflow: hidden; → 현재 크기 이상의 영역은 모두 감춤
+- padding: 0; → 부풀리는 영역을 없앰
+- margin: -1px; → 벌리는 영역을 오히려 더 좁힘 
+- border: 0; → 테두리를 없앰
+- clip: rect(0,0,0,0); → 보여지게 하는 부분을 설정하는 것인데, 모든 값이 0 이므로 결국 보여지는 부분이 없음.
 
-position: absolute; → 위치를 지정함. 위로 붕 뜬 상태가 되어 뒤에 오는 요소들의 자리를 차지하지 않게 됨
-width: 1px; → 가로크기
-height: 1px; → 세로크기
-overflow: hidden; → 현재 크기 이상의 영역은 모두 감춤
-padding: 0; → 부풀리는 영역을 없앰
-margin: -1px; → 벌리는 영역을 오히려 더 좁힘 
-border: 0; → 테두리를 없앰
-clip: rect(0,0,0,0); → 보여지게 하는 부분을 설정하는 것인데, 모든 값이 0 이므로 결국 보여지는 부분이 없음
+
+#### vue 수정
+
+`DataBinding.vue`
+```vue
+    <span>
+        <img :src= imgUrl.src v-bind:alt= 'imgUrl["$ {curentPage}"].alt '
+        />
+        <reading-test
+        class="sr-only"
+        />
+    </span>
+```
+
+`readingTest.vue`
+```vue
+<template>
+<ul>
+  <li id="form-title">양식 Form</li>
+  <li>
+    <h2>1. 1번째 입력항목</h2>
+    <ul>
+      <li>성명: (입력란)</li>
+      <li>주민등록번호: (입력란)</li>
+      <li>휴대전화: (입력란)</li>
+    </ul>
+  </li>
+  <li>
+    <h2>2. 2번째 입력항목들</h2>
+    <ul>
+      <li>성명: (입력란)</li>
+      <li>주민등록번호: (입력란)</li>
+      <li>휴대전화: (입력란)</li>
+      <li>주소: (입력란)</li>
+    </ul>
+  </li>
+  <li>
+    <h2>3. 3번째 입력항목</h2>
+    <ul>
+      <li>유형 : 1, 2 선택</li>
+      <li>원인: 1, 2 선택</li>
+      <li>사유: 1, 2, 3, 4, 5 중 선택1</li>
+    </ul>
+  </li>
+</ul>
+</template>
+```
+
+처음엔 이런 방식을 사용해서 대체텍스트를 제공하려고 했다.
+일렇게 작성을 하고 pc에서 테스트로 크롬 스크린 리더를 사용했을 때는 정상적으로 작동을 했다. 그래서 문제가 없는줄 알고 넘어갔는데 
+안드로이드, ios 기기의 talkBack, voiceOver 기능을 사용해서 테스트해보니 이미지의 라인이 아예 클릭이 안되거나 대체텍스트의 내용을 읽지 않는 문제가 있었다.
+
