--- a/_posts/2024-08-07-웹접근성.md
+++ b/_posts/2024-08-07-웹접근성.md
@@ -148,6 +148,48 @@ class = 'sr-only'
 ```
 
 처음엔 이런 방식을 사용해서 대체텍스트를 제공하려고 했다.
-일렇게 작성을 하고 pc에서 테스트로 크롬 스크린 리더를 사용했을 때는 정상적으로 작동을 했다. 그래서 문제가 없는줄 알고 넘어갔는데 
+
+이렇게 작성을 하고 pc에서 테스트로 크롬 스크린 리더를 사용했을 때는 정상적으로 작동을 했다. 그래서 문제가 없는줄 알고 넘어갔는데 
 안드로이드, ios 기기의 talkBack, voiceOver 기능을 사용해서 테스트해보니 이미지의 라인이 아예 클릭이 안되거나 대체텍스트의 내용을 읽지 않는 문제가 있었다.
 
+
+모바일 웹에서 재생되지 않는 문제를 해결하기 위해 여러가지 방법을 찾아봤다. 
+
+첫번째로 `<figure>` 태그와 `<figcaption>`을 사용하는 방법이 있었는데
+
+`<figcaption>`태그는 오직 부모 요소인 `<figure>`태그의 콘텐츠를 참조할 수 있는 caption이나 범례를 나타내기 위해 사용하는 태그이다.
+
+`<figure>`태그는 주변 콘텐츠의 이해와 흐름과 관련된 이미지, 그림, 도표, 사진, 코드목록 또는 기타 관련 콘텐츠 등의 독립된 콘텐츠를 나타내는 태그이다.
+선택적으로 `<figcaption>`태그를 사용해서 이 콘텐츠를 참조할 수 있는 캡션을 추가할 수 있다.
+
+위와 같은 설명으로 대체 텍스트을 caption처럼 제공하는 태그로 이해하여 적용해봤으나 별다른 변화는 없었음.
+
+
+다음으로 찾아본 방법은 aira-label 속성과 aria-labelledby 속성이다
+
+##### aria-label
+
+- aria는 html 요소에 접근 가능한 설명용 텍스트를 넣을 수 있으며 
+- aria-label은 화면에 현재 요소를 설명할 텍스트가 없을 경우 사용하는 설명용 텍스트를 담고 있다.
+- 그렇지만 aria-label = "대체텍스트"와 같이 사용하는데 짧은 문구만 사용할 수 있을것같다.
+
+##### aria-labelledby
+- aria-labelledby는 aria-label 속성과 달리 화면에 현재 요소를 설명할 텍스트가 있을 경우에 텍스트 영역과 현재 요소를 연결할 때 사용된다.
+사용하는방법은
+```vue
+    <span>
+        <img 
+        :src= imgUrl.src v-bind:alt= 'imgUrl["$ {curentPage}"].alt'
+        aria-labelledby="Test_aria"
+        
+        />
+        <reading-test
+        class="sr-only"
+        id="Test_aria"
+        />
+    </span>
+```
+
+위와 같이 설명이 필요한 태그에 aria-labelledby 속성을 넣고 설명문이 되는 태그의 id값을 넣어준다.
+
+위처럼 했을 때 pc 크롬, talkBack, voiceOver 모두 대체텍스트를 읽는걸 확인할 수 있었다.
